--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,10 +1,10 @@
 .header {
-  background: rebeccapurple;
   margin-bottom: 1.45rem;
+  font-family: "Lato", sans-serif;
+  text-align: center;
 
-  .headerContainer {
-    margin: 0 auto;
-    max-width: 960;
-    padding: 1.45rem 1.0875rem;
+  .siteTitle {
+    text-decoration: none;
+    color: #ff1654;
   }
 }
