--- a/src/pages/indexPage.module.scss
+++ b/src/pages/indexPage.module.scss
@@ -1,14 +1,27 @@
-.restaurant {
+.indexText {
+  font-family: "Roboto", sans-serif;
   color: #247ba0;
-  text-decoration: none;
-  font-family: "Roboto", sans-serif;
+  margin-bottom: 5%;
 }
 
-.restaurant:hover {
-  color: #70c1b3;
-}
+.restaurantContainer {
+  border: 1px solid lightblue;
+  border-radius: 8px;
+  padding: 10%;
+  margin-bottom: 5%;
 
-.special {
-  color: #3d8377;
-  font-family: "Roboto", sans-serif;
+  .restaurant {
+    color: #247ba0;
+    text-decoration: none;
+    font-family: "Roboto", sans-serif;
+  }
+
+  .restaurant:hover {
+    color: #70c1b3;
+  }
+
+  .special {
+    color: #3d8377;
+    font-family: "Roboto", sans-serif;
+  }
 }
