Adjust colors. Move borders

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -2,7 +2,7 @@
   margin-bottom: 1.45rem;
   font-family: "Lato", sans-serif;
   text-align: center;
-  background: lightblue;
+  background: deepskyblue;
   position: sticky;
   top: 0;
 
