--- a/src/pages/indexPage.module.scss
+++ b/src/pages/indexPage.module.scss
@@ -1,19 +1,27 @@
 .indexText {
   font-family: "Roboto", sans-serif;
-  color: #247ba0;
+  color: #1e607c;
+  font-size: 1.25rem;
   margin-bottom: 5%;
 }
 
+.link {
+  text-decoration: none;
+}
+
 .restaurantContainer {
-  border: 1px solid lightblue;
+  background: white;
   border-radius: 8px;
-  padding: 10%;
+  padding: 4%;
   margin-bottom: 5%;
 
   .restaurant {
-    color: #247ba0;
-    text-decoration: none;
+    color: #1e607c;
     font-family: "Roboto", sans-serif;
+
+    .emoji {
+      font-size: 1rem;
+    }
   }
 
   .restaurant:hover {
