--- a/src/pages/indexPage.module.scss
+++ b/src/pages/indexPage.module.scss
@@ -1,8 +1,9 @@
 .indexText {
-  font-family: "Roboto", sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
   color: #1e607c;
-  font-size: 1.25rem;
+  font-size: 1.4rem;
   margin-bottom: 5%;
+  font-weight: bold;
 }
 
 .link {
@@ -17,7 +18,7 @@
 
   .restaurant {
     color: #1e607c;
-    font-family: "Roboto", sans-serif;
+    font-family: "Open Sans Condensed", sans-serif;
 
     .emoji {
       font-size: 1rem;
