--- a/src/pages/indexPage.module.scss
+++ b/src/pages/indexPage.module.scss
@@ -1,9 +1,8 @@
 .indexText {
-  font-family: "Open Sans Condensed", sans-serif;
+  font-family: "Lato", sans-serif;
   color: #1e607c;
   font-size: 1.4rem;
   margin-bottom: 5%;
-  font-weight: bold;
 }
 
 .link {
@@ -18,7 +17,9 @@
 
   .restaurant {
     color: #1e607c;
-    font-family: "Open Sans Condensed", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 1.4rem;
 
     .emoji {
       font-size: 1rem;
