--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,7 +1,13 @@
-* {
+body {
+  background-color: whitesmoke;
   margin: 0;
 }
 
-body {
-  background-color: whitesmoke;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
