Add iframes. Fix linting

--- a/src/templates/restaurantPage.module.scss
+++ b/src/templates/restaurantPage.module.scss
@@ -4,6 +4,13 @@
   font-family: "Roboto", sans-serif;
 }
 
+.mapFrame {
+  width: 100%;
+  margin-top: 5%;
+  border-radius: 12px;
+  height: 250px;
+}
+
 .special {
   color: #3d8377;
   font-family: "Roboto", sans-serif;
