--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,3 +1,13 @@
 .main {
   margin: 0 5% 0;
+  @media all and (min-width: 700px) {
+    display: flex;
+    flex-direction: column;
+    margin: 0 25% 0;
+  }
+}
+
+.contact {
+  font-family: "Roboto", sans-serif;
+  padding-bottom: 10px;
 }
